Bug 437139 - [Wayland] Context menu opens behind apps launcher and popups
Summary: [Wayland] Context menu opens behind apps launcher and popups
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.21.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 417394 440554 441237 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-15 08:54 UTC by Patrick Silva
Modified: 2021-09-22 13:07 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-15 08:54:43 UTC
SUMMARY
Reproducible on both Arch Linux (Plasma 5.22 beta) and neon unstable.

STEPS TO REPRODUCE
1. click on an applet in system tray
2. right-click on applet clicked in the step 1
3. 

OBSERVED RESULT
context menu opens behind popup of the applet

EXPECTED RESULT
context menu should open in foreground

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Graphics Platform: Wayland

ADDITIONAL INFORMATION
context menus of apps launcher and digital clock are also affected
Comment 1 Nate Graham 2021-05-20 18:37:21 UTC
Can reproduce.
Comment 2 Bacteria 2021-06-23 05:10:53 UTC
Can reproduce.

Operating System: Arch Linux
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Comment 3 Patrick Silva 2021-08-20 16:22:52 UTC
*** Bug 441237 has been marked as a duplicate of this bug. ***
Comment 4 David Edmundson 2021-08-20 16:29:56 UTC
Maybe we should put grab popups in the ActiveLayer. It would work for the cases given.

It would be closer to how on X11 puts them in the unmanaged layer.
Comment 5 Benjamin Smith 2021-09-05 16:00:47 UTC
This sounds related to an issue I’ve noticed. If I right-click the app on the Task Manager, the menu will be covered by the window thumbnail.
Comment 6 Bug Janitor Service 2021-09-14 09:58:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1415
Comment 7 David Edmundson 2021-09-14 10:02:00 UTC
*** Bug 417394 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-09-14 13:28:36 UTC
Git commit 987c68f5a59cc1be94a2262649002d089c691771 by Nate Graham, on behalf of Andrey Butirsky.
Committed on 14/09/2021 at 13:28.
Pushed by ngraham into branch 'master'.

fix: [Wayland] Context menu opens behind apps launcher and popups

M  +2    -0    src/abstract_client.cpp

https://invent.kde.org/plasma/kwin/commit/987c68f5a59cc1be94a2262649002d089c691771
Comment 9 Nate Graham 2021-09-15 17:34:55 UTC
*** Bug 440554 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-09-15 17:35:07 UTC
*** Bug 417394 has been marked as a duplicate of this bug. ***