fix: [Wayland] Context menu opens behind apps launcher and popups

BUG: 437139